--- a/qmis.html
+++ b/qmis.html
@@ -7,6 +7,7 @@
 		<header>
 			<h1>Quick Maths in Space</h1>
 		</header>
+			<img src = "earth.png" width=100% height=10%>
 	</head>
 	<body>
 </html>
