--- a/qmis.html
+++ b/qmis.html
@@ -4,10 +4,16 @@
 	<head>
 		<title>BOOM QUICK MATHS</title>
 		<link rel="stylesheet" type="text/css" href="qmis.css">
-		<header>
-			<h1>Quick Maths in Space</h1>
-		</header>
-			<img src = "earth.png" width=100% height=10%>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
+	<header>
+		<h1>MATH EXPLORER</h1>
+	</header>
 	<body>
+		<div class="start_button">
+			<button>START</button>
+		</div>
+	<div id="stars_bg">
+	</div>
+	</body>
 </html>
