Added new background and made it cover size of browser

--- a/qmis.html
+++ b/qmis.html
@@ -7,7 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
 	<header>
-		<h1>MATH EXPLORER</h1>
+		<!-- <h1>MATH EXPLORER</h1> -->
 	</header>
 	<body>
 		<div class="start_button">
@@ -15,6 +15,6 @@
 		</div>
 	<div id="stars_bg">
 	</div>
-	<img src="Math_explorer2.png" width = 50% height =50% id = "earth">
+	<!-- <img src="Math_explorer2.png" width = 50% height =50% id = "earth"> -->
 	</body>
 </html>
