--- a/index.htm
+++ b/index.htm
@@ -3,45 +3,52 @@ var operations_list = ["+", "-", "*", "/"];
 var operation = operations_list[Math.floor(Math.random()*operations_list.length)];
 document.write(operation);
 document.write("<br>");
-document.write(Math.floor(Math.random() * 100), " + ", Math.floor(Math.random() * 100));
-document.write("<br>");
-var divisor = Math.floor(Math.random() * 100);
-//Math.floor(Math.random() * 100)) % 1 == 0
-if (divisor % 2 == 0)
+if (operation == "+")
 {
-	document.write(divisor, " / ", 2);
+	document.write(Math.floor(Math.random() * 100), " + ", Math.floor(Math.random() * 100));
 }
-else if (divisor % 3 == 0)
+else if (operation == '-')
 {
-	document.write(divisor, " / ", 3);
+	document.write(Math.floor(Math.random() * 100), " - ", Math.floor(Math.random() * 100));
 }
-else if (divisor % 4 == 0)
+else if (operation == '*')
 {
-	document.write(divisor, " / ", 4);
+	document.write(Math.floor(Math.random() * 10) + 1, " x ", Math.floor(Math.random() * 10) + 1);
 }
-else if (divisor % 5 == 0)
+else if (operation == '/')
 {
-	document.write(divisor, " / ", 5);
+	var divisor = Math.floor(Math.random() * 100);
+	if (divisor % 2 == 0)
+	{
+		document.write(divisor, " / ", 2);
+	}
+	else if (divisor % 3 == 0)
+	{
+		document.write(divisor, " / ", 3);
+	}
+	else if (divisor % 4 == 0)
+	{
+		document.write(divisor, " / ", 4);
+	}
+	else if (divisor % 5 == 0)
+	{
+		document.write(divisor, " / ", 5);
+	}
+	else if (divisor % 6 == 0)
+	{
+		document.write(divisor, " / ", 6);
+	}
+	else if (divisor % 7 == 0)
+	{
+		document.write(divisor, " / ", 7);
+	}
+	else if (divisor % 8 == 0)
+	{
+		document.write(divisor, " / ", 8);
+	}
+	else if (divisor % 9 == 0)
+	{
+		document.write(divisor, " / ", 9);
+	}
 }
-else if (divisor % 6 == 0)
-{
-	document.write(divisor, " / ", 6);
-}
-else if (divisor % 7 == 0)
-{
-	document.write(divisor, " / ", 7);
-}
-else if (divisor % 8 == 0)
-{
-	document.write(divisor, " / ", 8);
-}
-else if (divisor % 9 == 0)
-{
-	document.write(divisor, " / ", 9);
-}
-document.write("<br>");
-document.write(Math.floor(Math.random() * 100), " - ", Math.floor(Math.random() * 100));
-document.write("<br>");
-document.write(Math.floor(Math.random() * 10) + 1, " x ", Math.floor(Math.random() * 10) + 1);
-document.write("<br>");
 </script>
