Added new start buttons

--- a/qmis.html
+++ b/qmis.html
@@ -10,8 +10,11 @@
 		<!-- <h1>MATH EXPLORER</h1> -->
 	</header>
 	<body>
-		<div class="start_button">
+		<!-- <div class="start_button">
 			<button>START</button>
+		</div> -->
+		<div class = "start">
+			<input type="submit" class = "start_button" value="">
 		</div>
 	<div id="stars_bg">
 	</div>
