--- a/qmis.html
+++ b/qmis.html
@@ -68,11 +68,13 @@
 			<button>START</button>
 		</div> -->
 		<div class = "start">
-			<input onclick="window.location.href = qmis_play.html" type="submit" class = "start_button" value="">
+			<form>
+				<input type="button" class = "start_button" onclick="window.location.href = 'qmis_play.html'"/>
+			</form>
 		</div>
 	<div id="stars_bg">
 	</div>
-	<a href="qmis_play.html" id = "hidden_a">0000</a>
+	<!-- <a href="qmis_play.html" id = "hidden_a">0000</a> -->	
 	<!-- <img src="Math_explorer2.png" width = 50% height =50% id = "earth"> -->
 	</body>
 </html>
