Added equation box and adding canvas to html

--- a/canvas.html
+++ b/canvas.html
@@ -11,7 +11,7 @@ var y = -200;
 
 
 imgCall.onload = direction;
-imgCall.src = "http://i.stack.imgur.com/Rk0DW.png";   // load image
+imgCall.src = "asteroid.png";   // load image
 
 function direction() {
   context.clearRect(0, 0, canvas.width, canvas.height);  // clear canvas
