--- a/qmis_play.html
+++ b/qmis_play.html
@@ -6,8 +6,87 @@
 	</head>
 	<header>
 		<body>
-			<div id = "bg">
+			<script>
+			var operations_list = ["+", "-", "*", "/"];
+			var operation = operations_list[Math.floor(Math.random()*operations_list.length)];
+			document.write("<br>");
+			if (operation == "+")
+			{
+				document.write(Math.floor(Math.random() * 100), " + ", Math.floor(Math.random() * 100));
+			}
+			else if (operation == '-')
+			{
+				document.write(Math.floor(Math.random() * 100), " - ", Math.floor(Math.random() * 100));
+			}
+			else if (operation == '*')
+			{
+				document.write(Math.floor(Math.random() * 10) + 1, " x ", Math.floor(Math.random() * 10) + 1);
+			}
+			else if (operation == '/')
+			{
+				var divisor = Math.floor(Math.random() * 100);
+				if (divisor % 2 == 0)
+				{
+					document.write(divisor, " / ", 2);
+				}
+				else if (divisor % 3 == 0)
+				{
+					document.write(divisor, " / ", 3);
+				}
+				else if (divisor % 4 == 0)
+				{
+					document.write(divisor, " / ", 4);
+				}
+				else if (divisor % 5 == 0)
+				{
+					document.write(divisor, " / ", 5);
+				}
+				else if (divisor % 6 == 0)
+				{
+					document.write(divisor, " / ", 6);
+				}
+				else if (divisor % 7 == 0)
+				{
+					document.write(divisor, " / ", 7);
+				}
+				else if (divisor % 8 == 0)
+				{
+					document.write(divisor, " / ", 8);
+				}
+				else if (divisor % 9 == 0)
+				{
+					document.write(divisor, " / ", 9);
+				}
+			}
+			</script>
+			<div class = "eq_box">
+				<p>PLACEHOLDER EQUATION</p>
 			</div>
+			<canvas id="icanvas" class = "canvas">
+				<script type="text/javascript">
+					var imgCall = new Image();
+					var canvas = document.getElementById('icanvas');
+					var context = canvas.getContext("2d");
+					var x = 0;
+					var y = 0;
+					//var straightdiag = 1;
+					//var rightdiag = 2;
+					//var leftdiag = 3;
+
+
+					imgCall.onload = direction;
+					imgCall.src = "./game models/asteroid.png";   // load image
+
+					function direction() {
+					  context.clearRect(0, 0, canvas.width, canvas.height);  // clear canvas
+					  context.drawImage(imgCall, x, y);                       // draw image at current position
+
+					  y += 1;
+					  x -= 2
+					  if (y < 400) requestAnimationFrame(direction)        // loop
+					}
+				</script>
+			</canvas>
 		</body>
 	</header>
 </html>
