Added asteroid moving

--- a/canvas.html
+++ b/canvas.html
@@ -11,7 +11,7 @@ var y = -200;
 
 
 imgCall.onload = direction;
-imgCall.src = "asteroid.png";   // load image
+imgCall.src = "./game models/asteroid(updated).png";   // load image
 
 function direction() {
   context.clearRect(0, 0, canvas.width, canvas.height);  // clear canvas
