--- a/qmis.html
+++ b/qmis.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>BOOM QUICK MATHS</title>
+		<title>Math Explorer</title>
 		<script src="math_algorithms.js"></script>
 		<link rel="stylesheet" type="text/css" href="qmis.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
