Equation now shows in box

--- a/qmis_play.html
+++ b/qmis_play.html
@@ -7,62 +7,86 @@
 	</head>
 	<header>
 		<body>
+			<div class = "eq_box">
+				<p id = "equation"></p>
+			</div>
 			<script>
 			var operations_list = ["+", "-", "*", "/"];
 			var operation = operations_list[Math.floor(Math.random()*operations_list.length)];
 			document.write("<br>");
+			var equation;
 			if (operation == "+")
 			{
-				document.write(Math.floor(Math.random() * 100), " + ", Math.floor(Math.random() * 100));
+				equation = (Math.floor(Math.random() * 100));
+				equation +=  " + ";
+				equation += Math.floor(Math.random() * 100)
 			}
 			else if (operation == '-')
 			{
-				document.write(Math.floor(Math.random() * 100), " - ", Math.floor(Math.random() * 100));
+				equation = (Math.floor(Math.random() * 100));
+				equation += ' - ';
+				equation += Math.floor(Math.random() * 100);
 			}
 			else if (operation == '*')
 			{
-				document.write(Math.floor(Math.random() * 10) + 1, " x ", Math.floor(Math.random() * 10) + 1);
+				equation = (Math.floor(Math.random() * 10) + 1);
+				equation += " x "; 
+				equation += Math.floor(Math.random() * 10) + 1;
 			}
 			else if (operation == '/')
 			{
 				var divisor = Math.floor(Math.random() * 100);
 				if (divisor % 2 == 0)
 				{
-					document.write(divisor, " / ", 2);
+					equation = divisor;
+					equation += " / ";
+					equation += 2;
 				}
 				else if (divisor % 3 == 0)
 				{
-					document.write(divisor, " / ", 3);
+					equation = divisor; 
+					equation += " / ";
+					equation += 3;
 				}
 				else if (divisor % 4 == 0)
 				{
-					document.write(divisor, " / ", 4);
+					equation = divisor;
+					equation +=  " / ";
+					equation += 4;
 				}
 				else if (divisor % 5 == 0)
 				{
-					document.write(divisor, " / ", 5);
+					equation = divisor;
+					equation += " / ";
+					equation += 5;
 				}
 				else if (divisor % 6 == 0)
 				{
-					document.write(divisor, " / ", 6);
+					equation = divisor;
+					equation += " / ";
+					equation += 6;
 				}
 				else if (divisor % 7 == 0)
 				{
-					document.write(divisor, " / ", 7);
+					equation = divisor; 
+					equation += " / ";
+					equation +=  7;
 				}
 				else if (divisor % 8 == 0)
 				{
-					document.write(divisor, " / ", 8);
+					equation = divisor;
+					equation += " / ";
+					equation += 8;
 				}
 				else if (divisor % 9 == 0)
 				{
-					document.write(divisor, " / ", 9);
+					equation = divisor;
+					equation += " / ";
+					equation +=  9;
 				}
 			}
+			document.getElementById("equation").innerHTML = equation;
 			</script>
-			<div class = "eq_box">
-				<p>PLACEHOLDER EQUATION</p>
-			</div>
 			<canvas id="icanvas" class = "canvas">
 				<script type="text/javascript">
 					var imgCall = new Image();
