--- a/qmis_play.html
+++ b/qmis_play.html
@@ -110,21 +110,29 @@
 					  var randomNum = Math.floor(Math.random() * 4);
 
 						if (randomNum == 0){
+							var x = 231;
+							var y = 0;
 					  		y += 1;
 					  		x -= 2;
 					  		if (y < 110) requestAnimationFrame(direction)        // loop
 					  	}
 					  	else if (randomNum == 1){
+					  		var x = 231;
+							var y = -50;
 					  		y += 2;
 					  		x -= 3;
 					  		if (y < 110) requestAnimationFrame(direction)
 					  	}
 					  	else if (randomNum == 2){
+					  		var x = 200;
+							var y = 0;
 					  		y += 1;
 					  		x -= 1;
 					  		if (y < 110) requestAnimationFrame(direction)
 					  	}
 					  	else if (randomNum == 3){
+					  		var x = 231;
+							var y = -100;
 					  		x -= 1;
 					  		if (y < 110) requestAnimationFrame(direction)
 					  	}
