--- a/qmis_play.html
+++ b/qmis_play.html
@@ -9,6 +9,7 @@
 		<body>
 			<div class = "eq_box">
 				<p id = "equation"></p>
+				<p id = "answer"></p>
 				<form>
 					<input type = "text" id = "answer_field"><br>
 					<input type = "submit" value = "Enter" id = "submit_field"><br>
@@ -18,23 +19,33 @@
 			var operations_list = ["+", "-", "*", "/"];
 			var operation = operations_list[Math.floor(Math.random()*operations_list.length)];
 			var equation;
+			var answer;
 			if (operation == "+")
 			{
-				equation = (Math.floor(Math.random() * 100));
+				var add1 = Math.floor(Math.random() * 100);
+				var add2 = (Math.floor(Math.random() * 100));
+				equation = add1;
 				equation +=  " + ";
-				equation += Math.floor(Math.random() * 100);
+				equation += add2;
+				answer = add1 + add2;
 			}
 			else if (operation == '-')
 			{
-				equation = (Math.floor(Math.random() * 100));
+				var minus1 = (Math.floor(Math.random() * 100));
+				var minus2 = Math.floor(Math.random() * 100);
+				equation = minus1;
 				equation += ' - ';
-				equation += Math.floor(Math.random() * 100);
+				equation += minus2;
+				answer = minus1 - minus2;
 			}
 			else if (operation == '*')
 			{
-				equation = (Math.floor(Math.random() * 10) + 1);
+				var multiply1 = (Math.floor(Math.random() * 10) + 1);
+				var multiply2 = (Math.floor(Math.random() * 10) + 1);
+				equation = multiply1;
 				equation += " x "; 
-				equation += Math.floor(Math.random() * 10) + 1;
+				equation += multiply2;
+				answer = multiply1 * multiply2;
 			}
 			else if (operation == '/')
 			{
@@ -44,63 +55,75 @@
 					equation = divisor;
 					equation += " / ";
 					equation += 1;
+					answer = divisor / 1;
 				}
 				else if (divisor % 2 == 0)
 				{
 					equation = divisor;
 					equation += " / ";
 					equation += 2;
+					answer = divisor / 2;
 				}
 				else if (divisor % 3 == 0)
 				{
 					equation = divisor; 
 					equation += " / ";
 					equation += 3;
+					answer = divisor / 3;
 				}
 				else if (divisor % 4 == 0)
 				{
 					equation = divisor;
 					equation +=  " / ";
 					equation += 4;
+					answer = divisor / 4;
 				}
 				else if (divisor % 5 == 0)
 				{
 					equation = divisor;
 					equation += " / ";
 					equation += 5;
+					answer = divisor / 5;
 				}
 				else if (divisor % 6 == 0)
 				{
 					equation = divisor;
 					equation += " / ";
 					equation += 6;
+					answer = divisor / 6;
 				}
 				else if (divisor % 7 == 0)
 				{
 					equation = divisor; 
 					equation += " / ";
 					equation +=  7;
+					answer = divisor / 7;
 				}
 				else if (divisor % 8 == 0)
 				{
 					equation = divisor;
 					equation += " / ";
 					equation += 8;
+					answer = divisor / 8;
 				}
 				else if (divisor % 9 == 0)
 				{
 					equation = divisor;
 					equation += " / ";
 					equation +=  9;
+					answer = divisor / 9;
 				}
 				else if (divisor % 10 == 0)
 				{
 					equation = divisor;
 					equation += " / ";
 					equation +=  10;
+					answer = divisor / 10;
 				}
 			}
 			document.getElementById("equation").innerHTML = equation;
+			document.getElementById("answer").innerHTML = answer;
+			// return answer;
 			</script>
 			<canvas id="icanvas" class = "canvas">
 				<script type="text/javascript">
