--- a/qmis.html
+++ b/qmis.html
@@ -2,6 +2,7 @@
 
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Math Explorer</title>
 		<link rel="stylesheet" type="text/css" href="qmis.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
