--- a/qmis.html
+++ b/qmis.html
@@ -24,7 +24,7 @@
 	<!-- <a href="qmis_play.html" id = "hidden_a">0000</a> -->	
 	<!-- <img src="Math_explorer2.png" width = 50% height =50% id = "earth"> -->
 	<audio controls autoplay loop id = "song">
-		<source src="./audio files/rnm.mp3" type="audio/ogg">
+		<source src="audio files/rnm.mp3" type="audio/ogg">
 	</audio>
 	</body>
 </html>
