--- a/qmis_play.html
+++ b/qmis_play.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>Math Explorer</title>
+		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="qmis_play.css">
 	</head>
 	<header>
@@ -84,7 +85,7 @@
 				</script>
 			</canvas>
 		<audio controls autoplay loop id = "song">
-			<source src="./audio files/hubbub.mp3" type="audio/ogg">
+			<source src="audio files/hubbub.mp3" type="audio/ogg">
 		</audio>
 		</body>
 	</header>
