--- a/qmis.html
+++ b/qmis.html
@@ -8,21 +8,15 @@
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
 	<header>
-		<!-- <h1>MATH EXPLORER</h1> -->
 	</header>
 	<body>
-		<!-- <div class="start_button">
-			<button>START</button>
-		</div> -->
 		<div class = "start">
 			<form>
-				<input type="button" class = "start_button" onclick="window.location.href = 'qmis_play.html'"/>
+				<input type="button" class = "start_button" onclick="window.location.href = 'qmis_play.html'">
 			</form>
 		</div>
 	<div id="stars_bg">
 	</div>
-	<!-- <a href="qmis_play.html" id = "hidden_a">0000</a> -->	
-	<!-- <img src="Math_explorer2.png" width = 50% height =50% id = "earth"> -->
 	<audio controls autoplay loop id = "song">
 		<source src="audio files/rnm.mp3" type="audio/ogg">
 	</audio>
