--- a/qmis.html
+++ b/qmis.html
@@ -10,6 +10,7 @@
 	<header>
 	</header>
 	<body>
+		<img src="./game models/Astronaut.png" id="astroboi">
 		<div class = "start">
 			<form>
 				<input type="button" class = "start_button" onclick="window.location.href = 'qmis_play.html'">
