--- a/qmis_play.html
+++ b/qmis_play.html
@@ -12,7 +12,7 @@
 			</form>
 		</div>
 		<body id = "body"> 
-			<div class = "eq_box">
+			<div class = "eq_box" id = "eq_box">
 				<p id = "equation"></p>
 				<p id = "answer">Please enter an answer</p>
 				<p id = "success"></p>
@@ -21,6 +21,11 @@
 					<button id = "sub_button" onclick="Main1()"><br>
 				</form>
 			</div>
+			<div id="scoreboard">
+				<p id="your_score">Your Score:</p>
+				<p id="score_end"></p>
+			</div>
+			<img id = "earthdest" src = "./game models/Flaming Planet.png" height = 55% width = 35%>
 			<canvas id="icanvas" class = "canvas">
 				<script type="text/javascript">
 					var imgCall = new Image();
@@ -43,6 +48,9 @@
 					  {
 					  	requestAnimationFrame(direction);
 					  } else {
+					  	document.getElementById("earthdest").style.visibility = "visible";
+					  	document.getElementById("scoreboard").style.visibility = "visible";
+					  	document.getElementById("eq_box").style.visibility = "hidden";
 					  	document.getElementById("equation").innerHTML = "You lost!";
 					  	document.getElementById("answer").innerHTML = "Press Start to try again!";
 					  	document.getElementById("success").innerHTML = "";
@@ -57,23 +65,31 @@
 				</script>
 			<script src="Logic.js"></script>
 			<script>
+				var score = 0;
+				document.getElementById("score_end").innerHTML = score;
 				Main();
 				function Main1() {
+					
 					var answerValue = parseInt(document.getElementById("answer_field").value);
 					var answerTrue = document.getElementById("answer").value;
+					document.getElementById("score_end").innerHTML = score;
 					document.getElementById("answer_field").value = "";
 					if (answerValue == answerTrue)
 					{
 						document.getElementById("answer").innerHTML = "Please enter an answer";
 						document.getElementById("success").innerHTML = "Nice!";
 						document.getElementById("success").className = "success_animation";
+						score += 5;
+						document.getElementById("score_end").innerHTML = score;
 						x = 231;
 						y = 30;
 						Main();
 					} else {
 						document.getElementById("answer").innerHTML = "That's not correct :(";
 						document.getElementById("success").className = "unsucc";
+						document.getElementById("score_end").innerHTML = score;
 					}
+
 				}
 			</script>
 			</canvas>
