--- a/qmis_play.html
+++ b/qmis_play.html
@@ -41,7 +41,7 @@
 					var y = 30;
 					
 					imgCall.onload = direction;
-					imgCall.src = "./game models/asteroid(updated 3).png";   // load image
+					imgCall.src = "./game models/Asteroid(Updated 3).png";   // load image
 
 					function direction() {
 					  context.clearRect(0, 0, canvas.width, canvas.height);  // clear canvas
