Flaming planet fix

--- a/qmis_play.html
+++ b/qmis_play.html
@@ -30,7 +30,7 @@
 				<p id="your_score">Your Score:</p>
 				<p id="score_end"></p>
 			</div>
-			<img id = "earthdest" src = "./game models/Flaming Planet.png" height = 55% width = 35%>
+			<img id = "earthdest" src = "./game models/Flaming planet.png" height = 55% width = 35%>
 			<canvas id="icanvas" class = "canvas">
 				<script type="text/javascript">
 					var imgCall = new Image();
