Changed file names

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Math Explorer</title>
-		<link rel="stylesheet" type="text/css" href="qmis.css">
+		<link rel="stylesheet" type="text/css" href="home.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
 	<header>
@@ -13,7 +13,7 @@
 		<img src="./game models/Astronaut.png" id="astroboi">
 		<div class = "start">
 			<form>
-				<input type="button" class = "start_button" onclick="window.location.href = 'qmis_play.html'">
+				<input type="button" class = "start_button" onclick="window.location.href = 'game.html'">
 			</form>
 		</div>
 	<div id="stars_bg">
