Fixed play again bug

--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
 	</head>
 		<div class = "start">
 			<form>
-				<input type="button" class = "start_button" onclick="window.location.href = 'qmis_play.html'" id = "start_button">
+				<input type="button" class = "start_button" onclick="window.location.href = 'game.html'" id = "start_button">
 			</form>
 		</div>
 		<body id = "body"> 
