Added new start button and removed high score

--- a/game.html
+++ b/game.html
@@ -21,11 +21,11 @@
 					<button id = "sub_button" onclick="Main1()"><br>
 				</form>
 			</div>
-			<div id = "high_score">
+			<!-- <div id = "high_score">
 				<p id = "beat_hi_score">Congratulations! You beat the highest score!</p>
 				<p>High Score:</p>
 				<p id = "high_score_value"></p>
-			</div>
+			</div> -->
 			<div id="scoreboard">
 				<p id="your_score">Your Score:</p>
 				<p id="score_end"></p>
