--- a/home.html
+++ b/home.html
@@ -11,6 +11,9 @@
 	</header>
 	<body>
 		<img src="./game models/Astronaut.png" id="astroboi">
+		<!-- <div class = "instructions">
+			<p>Answer the math problem by typing the answer into the box at the bottom right!</p>
+		</div> -->
 		<div class = "start">
 			<form>
 				<input type="button" class = "start_button" onclick="window.location.href = 'game.html'">
