--- a/game.html
+++ b/game.html
@@ -21,11 +21,11 @@
 					<button id = "sub_button" onclick="Main1()"><br>
 				</form>
 			</div>
-			<!-- <div id = "high_score">
-				<p id = "beat_hi_score">Congratulations! You beat the highest score!</p>
+			<div id = "high_score">
+				<p id = "beat_hi_score">Congratulations! You got the highest score!</p>
 				<p>High Score:</p>
 				<p id = "high_score_value"></p>
-			</div> -->
+			</div>
 			<div id="scoreboard">
 				<p id="your_score">Your Score:</p>
 				<p id="score_end"></p>
@@ -73,9 +73,10 @@
 					  	if (newScore > score){
 					  		
 					  		document.getElementById("high_score_value").innerHTML = newScore;
+
 					  	}
-					  	else{
-					  		document.getElementById("beat_hi_score").style.visibility = "visible";	
+					  	else if (newScore < score) {
+					  		document.getElementById("beat_hi_score").style.visibility = "visible";
 					  		document.getElementById("high_score_value").innerHTML = score;
 					  	}
 					  }
@@ -85,6 +86,7 @@
 			<script src="Logic.js"></script>
 			<script>
 				var score = 0;
+				var newScore = 0;
 				document.getElementById("score_end").innerHTML = score;
 				Main();
 				function Main1() {
@@ -99,7 +101,7 @@
 						document.getElementById("success").innerHTML = "Nice!";
 						document.getElementById("success").className = "success_animation";
 						score += 5;
-						localStorage.setItem("score", score);
+						localStorage.setItem("new_score", score);
 						document.getElementById("score_end").innerHTML = score;
 						x = 231;
 						y = 30;
